[package]
name = "uexec"
version = "0.1.0"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
edition = "2018"

[dependencies]
crossbeam-utils = "^0.8"
fastrand = "^1.4"
flume = "^0.10"
once_cell = "^1.7"
parking_lot = "^0.11"

[dev-dependencies]
easy-parallel = "^3.1"
futures-lite = "^1.11"
num_cpus = "^1.13"
