[package]
name = "uexec"
version = "0.1.2"
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "Simple work-stealing global and local executor"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Keruspe/uexec"
homepage = "https://github.com/Keruspe/uexec"
documentation = "https://docs.rs/uexec"
keywords = ["async", "await", "future", "executor"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
crossbeam-utils = "^0.8"
fastrand = "^1.4"
flume = "^0.10"
once_cell = "^1.7"
parking_lot = "^0.11"

[dev-dependencies]
doc-comment = "^0.3"
easy-parallel = "^3.1"
futures-lite = "^1.11"
num_cpus = "^1.13"
